ensure that in kill involved pilots tab the logos are displayed next to eachother (prevent wrap)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,3 +26,7 @@ body {
     margin-bottom: 4px;
 }
 
+tr.attacker td.icons {
+    width: 290px;
+}
+
